add icons switch

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir="ltr" lang="en">
 <head>
+  <base href="/">
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
   <title>Uni Icons</title>
@@ -11,84 +12,121 @@
   <script nomodule src="/build/icn.js"></script>
 </head>
 <body>
-<div>
-  <uni-icons-filled-mat>person_pin</uni-icons-filled-mat>
-    <uni-icons-outlined-mat>person_pin</uni-icons-outlined-mat>
-    <uni-icons-round-mat>person_pin</uni-icons-round-mat>
-    <uni-icons-sharp-mat>person_pin</uni-icons-sharp-mat>
-    <uni-icons-two-tone-mat>person_pin</uni-icons-two-tone-mat>
-</div>
+<p>
+  <a href="assets/html/icons-mat.html">Icons Mat</a>
+</p>
 
-<div>
-  <uni-icons-filled-mat-shadow>person_pin</uni-icons-filled-mat-shadow>
-  <uni-icons-outlined-mat-shadow>person_pin</uni-icons-outlined-mat-shadow>
-  <uni-icons-round-mat-shadow>person_pin</uni-icons-round-mat-shadow>
-  <uni-icons-sharp-mat-shadow>person_pin</uni-icons-sharp-mat-shadow>
-  <uni-icons-two-tone-mat-shadow>person_pin</uni-icons-two-tone-mat-shadow>
-</div>
+<p>
+  <a href="assets/html/icons-filled-mat.html">Icons Filled Mat</a>
+</p>
 
-<div>
-  <uni-icons-filled-mat-wrap active>
-    <i>person_pin</i>
-  </uni-icons-filled-mat-wrap>
+<p>
+  <a href="assets/html/icons-outlined-mat.html">Icons Outlined Mat</a>
+</p>
 
-  <uni-icons-outlined-mat-wrap active>
-    <i>person_pin</i>
-  </uni-icons-outlined-mat-wrap>
+<p>
+  <a href="assets/html/icons-round-mat.html">Icons Round Mat</a>
+</p>
 
-  <uni-icons-round-mat-wrap active>
-    <i>person_pin</i>
-  </uni-icons-round-mat-wrap>
+<p>
+  <a href="assets/html/icons-sharp-mat.html">Icons Sharp Mat</a>
+</p>
 
-  <uni-icons-sharp-mat-wrap active>
-    <i>person_pin</i>
-  </uni-icons-sharp-mat-wrap>
+<p>
+  <a href="assets/html/icons-two-tone-mat.html">Icons Two Tone Mat</a>
+</p>
 
-  <uni-icons-two-tone-mat-wrap active>
-    <i>person_pin</i>
-  </uni-icons-two-tone-mat-wrap>
-</div>
+<!--<p>-->
+<!--  <uni-icons-filled-mat>person_pin</uni-icons-filled-mat>-->
+<!--  <uni-icons-outlined-mat>person_pin</uni-icons-outlined-mat>-->
+<!--  <uni-icons-round-mat>person_pin</uni-icons-round-mat>-->
+<!--  <uni-icons-sharp-mat>person_pin</uni-icons-sharp-mat>-->
+<!--  <uni-icons-two-tone-mat>person_pin</uni-icons-two-tone-mat>-->
+<!--  <span>(Custom Element)</span>-->
+<!--</p>-->
 
-<div>
-  <uni-icons-filled-mat-wrap active selector=".test" all>
-    <div class="test">favorite</div>
+<!--<p>-->
+<!--  <uni-icons-filled-mat name="person_pin"></uni-icons-filled-mat>-->
+<!--  <uni-icons-outlined-mat name="person_pin"></uni-icons-outlined-mat>-->
+<!--  <uni-icons-round-mat name="person_pin"></uni-icons-round-mat>-->
+<!--  <uni-icons-sharp-mat name="person_pin"></uni-icons-sharp-mat>-->
+<!--  <uni-icons-two-tone-mat name="person_pin"></uni-icons-two-tone-mat>-->
+<!--  <span>(Custom Element + prop name)</span>-->
+<!--</p>-->
 
-    <div>
-      <i class="test">person_pin</i>
-    </div>
-  </uni-icons-filled-mat-wrap>
+<!--<p>-->
+<!--  <uni-icons-filled-mat-shadow>person_pin</uni-icons-filled-mat-shadow>-->
+<!--  <uni-icons-outlined-mat-shadow>person_pin</uni-icons-outlined-mat-shadow>-->
+<!--  <uni-icons-round-mat-shadow>person_pin</uni-icons-round-mat-shadow>-->
+<!--  <uni-icons-sharp-mat-shadow>person_pin</uni-icons-sharp-mat-shadow>-->
+<!--  <uni-icons-two-tone-mat-shadow>person_pin</uni-icons-two-tone-mat-shadow>-->
+<!--  <span>(Web Component)</span>-->
+<!--</p>-->
 
-  <uni-icons-outlined-mat-wrap active selector=".test" all>
-    <div class="test">favorite</div>
+<!--<p>-->
+<!--  <uni-icons-filled-mat-wrap active>-->
+<!--    <i>person_pin</i>-->
+<!--  </uni-icons-filled-mat-wrap>-->
 
-    <div>
-      <i class="test">person_pin</i>
-    </div>
-  </uni-icons-outlined-mat-wrap>
+<!--  <uni-icons-outlined-mat-wrap active>-->
+<!--    <i>person_pin</i>-->
+<!--  </uni-icons-outlined-mat-wrap>-->
 
-  <uni-icons-round-mat-wrap active selector=".test" all>
-    <div class="test">favorite</div>
+<!--  <uni-icons-round-mat-wrap active>-->
+<!--    <i>person_pin</i>-->
+<!--  </uni-icons-round-mat-wrap>-->
 
-    <div>
-      <i class="test">person_pin</i>
-    </div>
-  </uni-icons-round-mat-wrap>
+<!--  <uni-icons-sharp-mat-wrap active>-->
+<!--    <i>person_pin</i>-->
+<!--  </uni-icons-sharp-mat-wrap>-->
 
-  <uni-icons-sharp-mat-wrap active selector=".test" all>
-    <div class="test">favorite</div>
+<!--  <uni-icons-two-tone-mat-wrap active>-->
+<!--    <i>person_pin</i>-->
+<!--  </uni-icons-two-tone-mat-wrap>-->
 
-    <div>
-      <i class="test">person_pin</i>
-    </div>
-  </uni-icons-sharp-mat-wrap>
+<!--  <span>(Custom Element Wrapper + first child)</span>-->
+<!--</p>-->
 
-  <uni-icons-two-tone-mat-wrap active selector=".test" all>
-    <div class="test">favorite</div>
+<!--<div>-->
+<!--  <uni-icons-filled-mat-wrap active selector=".test" all>-->
+<!--    <div class="test">favorite</div>-->
 
-    <div>
-      <i class="test">person_pin</i>
-    </div>
-  </uni-icons-two-tone-mat-wrap>
-</div>
+<!--    <div>-->
+<!--      <i class="test">person_pin</i>-->
+<!--    </div>-->
+<!--  </uni-icons-filled-mat-wrap>-->
+
+<!--  <uni-icons-outlined-mat-wrap active selector=".test" all>-->
+<!--    <div class="test">favorite</div>-->
+
+<!--    <div>-->
+<!--      <i class="test">person_pin</i>-->
+<!--    </div>-->
+<!--  </uni-icons-outlined-mat-wrap>-->
+
+<!--  <uni-icons-round-mat-wrap active selector=".test" all>-->
+<!--    <div class="test">favorite</div>-->
+
+<!--    <div>-->
+<!--      <i class="test">person_pin</i>-->
+<!--    </div>-->
+<!--  </uni-icons-round-mat-wrap>-->
+
+<!--  <uni-icons-sharp-mat-wrap active selector=".test" all>-->
+<!--    <div class="test">favorite</div>-->
+
+<!--    <div>-->
+<!--      <i class="test">person_pin</i>-->
+<!--    </div>-->
+<!--  </uni-icons-sharp-mat-wrap>-->
+
+<!--  <uni-icons-two-tone-mat-wrap active selector=".test" all>-->
+<!--    <div class="test">favorite</div>-->
+
+<!--    <div>-->
+<!--      <i class="test">person_pin</i>-->
+<!--    </div>-->
+<!--  </uni-icons-two-tone-mat-wrap>-->
+<!--</div>-->
 </body>
 </html>
