add color support

--- a/src/assets/html/fa/icons-fa-brands.html
+++ b/src/assets/html/fa/icons-fa-brands.html
@@ -16,10 +16,10 @@
 <!--Fix: Load fonts from shadow root does not work-->
 <uni-icons-fa-brands></uni-icons-fa-brands>
 
-<h4>Custom Element + prop 'name':</h4>
+<h4>Custom Element:</h4>
 <uni-icons-fa-brands name="apple"></uni-icons-fa-brands>
 
-<h4>Web Component + prop 'name':</h4>
+<h4>Web Component:</h4>
 <uni-icons-fa-brands-shadow name="apple"></uni-icons-fa-brands-shadow>
 
 <h4>Custom Element Wrapper + first child:</h4>
