--- a/src/assets/html/fa/icons-fa-solid.html
+++ b/src/assets/html/fa/icons-fa-solid.html
@@ -16,10 +16,10 @@
 <!--Fix: Load fonts from shadow root does not work-->
 <uni-icons-fa-solid></uni-icons-fa-solid>
 
-<h4>Custom Element + prop 'name':</h4>
+<h4>Custom Element:</h4>
 <uni-icons-fa-solid name="check-circle"></uni-icons-fa-solid>
 
-<h4>Web Component + prop 'name':</h4>
+<h4>Web Component:</h4>
 <uni-icons-fa-solid-shadow name="check-circle"></uni-icons-fa-solid-shadow>
 
 <h4>Custom Element Wrapper + first child:</h4>
