--- a/src/assets/html/fa/icons-fa.html
+++ b/src/assets/html/fa/icons-fa.html
@@ -14,12 +14,12 @@
 <body>
 <a href="/">Home</a>
 
-<h4>Custom Element + prop 'name':</h4>
+<h4>Custom Element:</h4>
 <uni-icons-fa mode="solid" name="check-circle"></uni-icons-fa>
 <uni-icons-fa mode="regular" name="check-circle"></uni-icons-fa>
 <uni-icons-fa mode="brands" name="apple"></uni-icons-fa>
 
-<h4>Web Component + prop 'name':</h4>
+<h4>Web Component:</h4>
 <uni-icons-fa-shadow mode="solid" name="check-circle"></uni-icons-fa-shadow>
 <uni-icons-fa-shadow mode="regular" name="check-circle"></uni-icons-fa-shadow>
 <uni-icons-fa-shadow mode="brands" name="apple"></uni-icons-fa-shadow>
