--- a/src/assets/html/fa/icon-fa.html
+++ b/src/assets/html/fa/icon-fa.html
@@ -14,5 +14,9 @@
 <body>
 <a href="/">Home</a>
 
+<h4>Icon Fa:</h4>
+<uni-icon-fa color="primary" name="copy"></uni-icon-fa>
+<uni-icon-fa color="primary" name="download"></uni-icon-fa>
+<uni-icon-fa color="primary" name="file-download"></uni-icon-fa>
 </body>
 </html>
