add icon options

--- a/src/assets/html/mat/icon-mat.html
+++ b/src/assets/html/mat/icon-mat.html
@@ -15,7 +15,7 @@
 <a href="/">Home</a>
 
 <h4>Icon Mat:</h4>
-<uni-icon-mat color="primary" name="3d-rotation"></uni-icon-mat>
+<uni-icon-mat rotate degree="180" name="3d-rotation"></uni-icon-mat>
 <uni-icon-mat color="primary" name="arrow-drop-down"></uni-icon-mat>
 </body>
 </html>
