--- a/src/assets/html/fa/icons-fa-brands.html
+++ b/src/assets/html/fa/icons-fa-brands.html
@@ -23,12 +23,12 @@
 <uni-icons-fa-brands-shadow name="apple"></uni-icons-fa-brands-shadow>
 
 <h4>Custom Element Wrapper + first child:</h4>
-<uni-icons-fa-brands-wrap active name="apple">
+<uni-icons-fa-wrap active font="brands" name="apple">
   <i></i>
-</uni-icons-fa-brands-wrap>
+</uni-icons-fa-wrap>
 
 <h4>Custom Element Wrapper + selector (all):</h4>
-<uni-icons-fa-brands-wrap active name="apple" selector=".test" all>
+<uni-icons-fa-wrap active font="brands" name="apple" selector=".test" all>
   <span>Text</span>
 
   <span class="test"></span>
@@ -36,6 +36,6 @@
   <span>
     <i class="test"></i>
   </span>
-</uni-icons-fa-brands-wrap>
+</uni-icons-fa-wrap>
 </body>
 </html>
