--- a/src/assets/html/fa/icons-fa-solid.html
+++ b/src/assets/html/fa/icons-fa-solid.html
@@ -23,12 +23,12 @@
 <uni-icons-fa-solid-shadow name="check-circle"></uni-icons-fa-solid-shadow>
 
 <h4>Custom Element Wrapper + first child:</h4>
-<uni-icons-fa-solid-wrap active name="check-circle">
+<uni-icons-fa-wrap active font="solid" name="check-circle">
   <i></i>
-</uni-icons-fa-solid-wrap>
+</uni-icons-fa-wrap>
 
 <h4>Custom Element Wrapper + selector (all):</h4>
-<uni-icons-fa-solid-wrap active name="check-circle" selector=".test" all>
+<uni-icons-fa-wrap active font="solid" name="check-circle" selector=".test" all>
   <span>Text</span>
 
   <span class="test"></span>
@@ -36,6 +36,6 @@
   <span>
     <i class="test"></i>
   </span>
-</uni-icons-fa-solid-wrap>
+</uni-icons-fa-wrap>
 </body>
 </html>
