--- a/src/assets/html/mat/icons-mat-two-tone.html
+++ b/src/assets/html/mat/icons-mat-two-tone.html
@@ -18,7 +18,7 @@
 <uni-icons-mat-two-tone></uni-icons-mat-two-tone>
 
 <h4>Custom Element:</h4>
-<uni-icons-mat-two-tone>person_pin</uni-icons-mat-two-tone>
+<uni-icons-mat-two-tone color="warn">person_pin</uni-icons-mat-two-tone>
 
 <h4>Custom Element + prop 'name':</h4>
 <uni-icons-mat-two-tone name="person_pin"></uni-icons-mat-two-tone>
