--- a/src/assets/html/mat/icons-mat.html
+++ b/src/assets/html/mat/icons-mat.html
@@ -23,10 +23,10 @@
 
 <h4>Custom Element + prop 'name':</h4>
 <uni-icons-mat name="person_pin"></uni-icons-mat>
-<uni-icons-mat name="person_pin" font="outlined"></uni-icons-mat>
-<uni-icons-mat name="person_pin" font="round"></uni-icons-mat>
-<uni-icons-mat name="person_pin" font="sharp"></uni-icons-mat>
-<uni-icons-mat name="person_pin" font="two-tone"></uni-icons-mat>
+<uni-icons-mat font="outlined" name="person_pin"></uni-icons-mat>
+<uni-icons-mat font="round" name="person_pin"></uni-icons-mat>
+<uni-icons-mat font="sharp" name="person_pin"></uni-icons-mat>
+<uni-icons-mat font="two-tone" name="person_pin"></uni-icons-mat>
 
 <h4>Web Component:</h4>
 <uni-icons-mat-shadow font="filled">person_pin</uni-icons-mat-shadow>
@@ -36,11 +36,11 @@
 <uni-icons-mat-shadow font="two-tone">person_pin</uni-icons-mat-shadow>
 
 <h4>Web Component + prop 'name':</h4>
-<uni-icons-mat-shadow name="person_pin" font="filled"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow name="person_pin" font="outlined"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow name="person_pin" font="round"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow name="person_pin" font="sharp"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow name="person_pin" font="two-tone"></uni-icons-mat-shadow>
+<uni-icons-mat-shadow font="filled" name="person_pin"></uni-icons-mat-shadow>
+<uni-icons-mat-shadow font="outlined" name="person_pin"></uni-icons-mat-shadow>
+<uni-icons-mat-shadow font="round" name="person_pin"></uni-icons-mat-shadow>
+<uni-icons-mat-shadow font="sharp" name="person_pin"></uni-icons-mat-shadow>
+<uni-icons-mat-shadow font="two-tone" name="person_pin"></uni-icons-mat-shadow>
 
 <h4>Custom Element Wrapper + first child:</h4>
 <uni-icons-mat-wrap active font="filled">
@@ -60,19 +60,19 @@
 </uni-icons-mat-wrap>
 
 <h4>Custom Element Wrapper + prop 'name' + first child:</h4>
-<uni-icons-mat-wrap active name="person_pin" font="filled">
+<uni-icons-mat-wrap active font="filled" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="outlined">
+<uni-icons-mat-wrap active font="outlined" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="round">
+<uni-icons-mat-wrap active font="round" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="sharp">
+<uni-icons-mat-wrap active font="sharp" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="two-tone">
+<uni-icons-mat-wrap active font="two-tone" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
 
@@ -110,31 +110,31 @@
 </uni-icons-mat-wrap>
 
 <h4>Custom Element Wrapper + prop 'name' + selector (all):</h4>
-<uni-icons-mat-wrap active name="person_pin" font="filled" selector=".test" all>
+<uni-icons-mat-wrap active font="filled" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="outlined" selector=".test" all>
+<uni-icons-mat-wrap active font="outlined" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="round" selector=".test" all>
+<uni-icons-mat-wrap active font="round" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="sharp" selector=".test" all>
+<uni-icons-mat-wrap active font="sharp" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active name="person_pin" font="two-tone" selector=".test" all>
+<uni-icons-mat-wrap active font="two-tone" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
