--- a/src/assets/html/fa/icon-fa.html
+++ b/src/assets/html/fa/icon-fa.html
@@ -15,7 +15,7 @@
 <a href="/">Home</a>
 
 <h4>Icon Fa:</h4>
-<uni-icon-fa name="copy"></uni-icon-fa>
+<uni-icon-fa font="regular" name="copy"></uni-icon-fa>
 <uni-icon-fa name="download"></uni-icon-fa>
 <uni-icon-fa name="file-download"></uni-icon-fa>
 </body>
