--- a/src/assets/html/fa/icon-fa.html
+++ b/src/assets/html/fa/icon-fa.html
@@ -18,5 +18,10 @@
 <uni-icon-fa font="regular" name="copy"></uni-icon-fa>
 <uni-icon-fa name="download"></uni-icon-fa>
 <uni-icon-fa name="file-download"></uni-icon-fa>
+
+<p></p>
+<uni-icon-far-copy></uni-icon-far-copy>
+<uni-icon-fas-download></uni-icon-fas-download>
+<uni-icon-fas-file-download></uni-icon-fas-file-download>
 </body>
 </html>
