fix: demo pages

--- a/src/assets/html/fa/icon-fa.html
+++ b/src/assets/html/fa/icon-fa.html
@@ -15,13 +15,13 @@
 <a href="/">Home</a>
 
 <h4>Icon Fa:</h4>
-<uni-icon-fa font="regular" name="copy"></uni-icon-fa>
+<uni-icon-fa type="brands" name="github"></uni-icon-fa>
+<uni-icon-fa type="regular" name="copy"></uni-icon-fa>
 <uni-icon-fa name="download"></uni-icon-fa>
-<uni-icon-fa name="file-download"></uni-icon-fa>
 
 <p></p>
-<uni-icon-far-copy></uni-icon-far-copy>
-<uni-icon-fas-download></uni-icon-fas-download>
-<uni-icon-fas-file-download></uni-icon-fas-file-download>
+<uni-fab-github></uni-fab-github>
+<uni-far-copy></uni-far-copy>
+<uni-fas-download></uni-fas-download>
 </body>
 </html>
