--- a/src/assets/html/fa/icons-fa-brands.html
+++ b/src/assets/html/fa/icons-fa-brands.html
@@ -13,22 +13,17 @@
 </head>
 <body>
 <a href="/">Home</a>
-<!--Fix: Load fonts from shadow root does not work-->
-<uni-icons-fa-brands></uni-icons-fa-brands>
 
 <h4>Custom Element:</h4>
-<uni-icons-fa-brands name="apple"></uni-icons-fa-brands>
+<uni-icons-fa-b init name="github"></uni-icons-fa-b>
 
-<h4>Web Component:</h4>
-<uni-icons-fa-brands-shadow name="apple"></uni-icons-fa-brands-shadow>
-
-<h4>Custom Element Wrapper + first child:</h4>
-<uni-icons-fa-wrap active font="brands" name="apple">
+<h4>Wrapper + first child:</h4>
+<uni-icons-fa-b-wrap name="github">
   <i></i>
-</uni-icons-fa-wrap>
+</uni-icons-fa-b-wrap>
 
-<h4>Custom Element Wrapper + selector (all):</h4>
-<uni-icons-fa-wrap active font="brands" name="apple" selector=".test" all>
+<h4>Wrapper + selector (all):</h4>
+<uni-icons-fa-b-wrap name="github" selector=".test" all>
   <span>Text</span>
 
   <span class="test"></span>
@@ -36,6 +31,6 @@
   <span>
     <i class="test"></i>
   </span>
-</uni-icons-fa-wrap>
+</uni-icons-fa-b-wrap>
 </body>
 </html>
