--- a/src/assets/html/fa/icons-fa.html
+++ b/src/assets/html/fa/icons-fa.html
@@ -15,42 +15,37 @@
 <a href="/">Home</a>
 
 <h4>Custom Element:</h4>
-<uni-icons-fa font="solid" name="check-circle"></uni-icons-fa>
-<uni-icons-fa font="regular" name="check-circle"></uni-icons-fa>
-<uni-icons-fa font="brands" name="apple"></uni-icons-fa>
+<uni-icons-fa init name="check-circle"></uni-icons-fa>
+<uni-icons-fa type="regular" name="check-circle"></uni-icons-fa>
+<uni-icons-fa type="brands" name="github"></uni-icons-fa>
 
-<h4>Web Component:</h4>
-<uni-icons-fa-shadow font="solid" name="check-circle"></uni-icons-fa-shadow>
-<uni-icons-fa-shadow font="regular" name="check-circle"></uni-icons-fa-shadow>
-<uni-icons-fa-shadow font="brands" name="apple"></uni-icons-fa-shadow>
-
-<h4>Custom Element Wrapper + first child:</h4>
-<uni-icons-fa-wrap active font="solid" name="check-circle">
+<h4>Wrapper + first child:</h4>
+<uni-icons-fa-wrap name="check-circle">
   <i></i>
 </uni-icons-fa-wrap>
-<uni-icons-fa-wrap active font="regular" name="check-circle">
+<uni-icons-fa-wrap type="regular" name="check-circle">
   <i></i>
 </uni-icons-fa-wrap>
-<uni-icons-fa-wrap active font="brands" name="apple">
+<uni-icons-fa-wrap type="brands" name="github">
   <i></i>
 </uni-icons-fa-wrap>
 
-<h4>Custom Element Wrapper + selector (all):</h4>
-<uni-icons-fa-wrap active font="solid" name="check-circle" selector=".test" all>
+<h4>Wrapper + selector (all):</h4>
+<uni-icons-fa-wrap name="check-circle" selector=".test" all>
   <span>Text</span>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-fa-wrap>
-<uni-icons-fa-wrap active font="regular" name="check-circle" selector=".test" all>
+<uni-icons-fa-wrap type="regular" name="check-circle" selector=".test" all>
   <span>Text</span>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-fa-wrap>
-<uni-icons-fa-wrap active font="brands" name="apple" selector=".test" all>
+<uni-icons-fa-wrap type="brands" name="github" selector=".test" all>
   <span>Text</span>
   <span class="test"></span>
   <span>
