--- a/src/assets/html/mat/icon-mat.html
+++ b/src/assets/html/mat/icon-mat.html
@@ -15,8 +15,13 @@
 <a href="/">Home</a>
 
 <h4>Icon Mat:</h4>
-<uni-icon-mat name="3d-rotation"></uni-icon-mat>
-<uni-icon-mat name="arrow-drop-down"></uni-icon-mat>
-<uni-icon-mat name="add-shopping-cart"></uni-icon-mat>
+<uni-icon-mat name="play-circle"></uni-icon-mat>
+<uni-icon-mat type="outlined" name="play-circle"></uni-icon-mat>
+<uni-icon-mat type="two-tone" name="play-circle"></uni-icon-mat>
+
+<p></p>
+<uni-mat-f-play-circle></uni-mat-f-play-circle>
+<uni-mat-o-play-circle></uni-mat-o-play-circle>
+<uni-mat-tt-play-circle></uni-mat-tt-play-circle>
 </body>
 </html>
