--- a/src/assets/html/mat/icons-mat.html
+++ b/src/assets/html/mat/icons-mat.html
@@ -16,125 +16,100 @@
 
 <h4>Custom Element:</h4>
 <uni-icons-mat>person_pin</uni-icons-mat>
-<uni-icons-mat font="outlined">person_pin</uni-icons-mat>
-<uni-icons-mat font="round">person_pin</uni-icons-mat>
-<uni-icons-mat font="sharp">person_pin</uni-icons-mat>
-<uni-icons-mat font="two-tone">person_pin</uni-icons-mat>
+<uni-icons-mat type="outlined">person_pin</uni-icons-mat>
+<uni-icons-mat type="rounded">person_pin</uni-icons-mat>
+<uni-icons-mat type="sharp">person_pin</uni-icons-mat>
+<uni-icons-mat type="two-tone">person_pin</uni-icons-mat>
 
 <h4>Custom Element + prop 'name':</h4>
 <uni-icons-mat name="person_pin"></uni-icons-mat>
-<uni-icons-mat font="outlined" name="person_pin"></uni-icons-mat>
-<uni-icons-mat font="round" name="person_pin"></uni-icons-mat>
-<uni-icons-mat font="sharp" name="person_pin"></uni-icons-mat>
-<uni-icons-mat font="two-tone" name="person_pin"></uni-icons-mat>
+<uni-icons-mat type="outlined" name="person_pin"></uni-icons-mat>
+<uni-icons-mat type="rounded" name="person_pin"></uni-icons-mat>
+<uni-icons-mat type="sharp" name="person_pin"></uni-icons-mat>
+<uni-icons-mat type="two-tone" name="person_pin"></uni-icons-mat>
 
-<h4>Web Component:</h4>
-<uni-icons-mat-shadow font="filled">person_pin</uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="outlined">person_pin</uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="round">person_pin</uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="sharp">person_pin</uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="two-tone">person_pin</uni-icons-mat-shadow>
-
-<h4>Web Component + prop 'name':</h4>
-<uni-icons-mat-shadow font="filled" name="person_pin"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="outlined" name="person_pin"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="round" name="person_pin"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="sharp" name="person_pin"></uni-icons-mat-shadow>
-<uni-icons-mat-shadow font="two-tone" name="person_pin"></uni-icons-mat-shadow>
-
-<h4>Custom Element Wrapper + first child:</h4>
-<uni-icons-mat-wrap active font="filled">
+<h4>Wrapper + first child:</h4>
+<uni-icons-mat-wrap>
   <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="outlined">
+<uni-icons-mat-wrap type="outlined">
   <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="round">
+<uni-icons-mat-wrap type="rounded">
   <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="sharp">
+<uni-icons-mat-wrap type="sharp">
   <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="two-tone">
+<uni-icons-mat-wrap type="two-tone">
   <i>person_pin</i>
 </uni-icons-mat-wrap>
 
-<h4>Custom Element Wrapper + prop 'name' + first child:</h4>
-<uni-icons-mat-wrap active font="filled" name="person_pin">
+<h4>Wrapper + prop 'name' + first child:</h4>
+<uni-icons-mat-wrap name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="outlined" name="person_pin">
+<uni-icons-mat-wrap type="outlined" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="round" name="person_pin">
+<uni-icons-mat-wrap type="rounded" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="sharp" name="person_pin">
+<uni-icons-mat-wrap type="sharp" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="two-tone" name="person_pin">
+<uni-icons-mat-wrap type="two-tone" name="person_pin">
   <i></i>
 </uni-icons-mat-wrap>
 
-<h4>Custom Element Wrapper + selector (all):</h4>
-<uni-icons-mat-wrap active font="filled" selector=".test" all>
-  <span class="test">stop_circle</span>
-  <span>
-    <i class="test">person_pin</i>
-  </span>
+<h4>Wrapper + first children:</h4>
+<uni-icons-mat-wrap all>
+  <span>stop_circle</span>
+  <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="outlined" selector=".test" all>
-  <span class="test">stop_circle</span>
-  <span>
-    <i class="test">person_pin</i>
-  </span>
+<uni-icons-mat-wrap type="outlined" all>
+  <span>stop_circle</span>
+  <i>person_pin</i>
 </uni-icons-mat-wrap>
-
-<uni-icons-mat-wrap active font="round" selector=".test" all>
-  <span class="test">stop_circle</span>
-  <span>
-    <i class="test">person_pin</i>
-  </span>
+<uni-icons-mat-wrap type="rounded" all>
+  <span>stop_circle</span>
+  <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="sharp" selector=".test" all>
-  <span class="test">stop_circle</span>
-  <span>
-    <i class="test">person_pin</i>
-  </span>
+<uni-icons-mat-wrap type="sharp" all>
+  <span>stop_circle</span>
+  <i>person_pin</i>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="two-tone" selector=".test" all>
-  <span class="test">stop_circle</span>
-  <span>
-    <i class="test">person_pin</i>
-  </span>
+<uni-icons-mat-wrap type="two-tone" all>
+  <span>stop_circle</span>
+  <i>person_pin</i>
 </uni-icons-mat-wrap>
 
-<h4>Custom Element Wrapper + prop 'name' + selector (all):</h4>
-<uni-icons-mat-wrap active font="filled" name="person_pin" selector=".test" all>
+<h4>Wrapper + prop 'name' + selector (all):</h4>
+<uni-icons-mat-wrap name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="outlined" name="person_pin" selector=".test" all>
+<uni-icons-mat-wrap type="outlined" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="round" name="person_pin" selector=".test" all>
+<uni-icons-mat-wrap type="rounded" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="sharp" name="person_pin" selector=".test" all>
+<uni-icons-mat-wrap type="sharp" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
   </span>
 </uni-icons-mat-wrap>
-<uni-icons-mat-wrap active font="two-tone" name="person_pin" selector=".test" all>
+<uni-icons-mat-wrap type="two-tone" name="person_pin" selector=".test" all>
   <span class="test"></span>
   <span>
     <i class="test"></i>
