--- a/src/index.html
+++ b/src/index.html
@@ -51,7 +51,7 @@
 </p>
 
 <p>
-  <a href="assets/html/mat/icons-mat-round.html">Icons Mat Round</a>
+  <a href="assets/html/mat/icons-mat-rounded.html">Icons Mat Rounded</a>
 </p>
 
 <p>
@@ -60,6 +60,20 @@
 
 <p>
   <a href="assets/html/mat/icons-mat-two-tone.html">Icons Mat Two Tone</a>
+</p>
+
+<hr/>
+
+<p>
+  <a href="assets/html/tilt/index.html">Tilt</a>
+</p>
+
+<p>
+  <a href="assets/html/rotate/index.html">Rotate</a>
+</p>
+
+<p>
+  <a href="assets/html/theme/index.html">Theme</a>
 </p>
 </body>
 </html>
