--- a/src/assets/html/mat/icons-mat-two-tone.html
+++ b/src/assets/html/mat/icons-mat-two-tone.html
@@ -14,44 +14,31 @@
 </head>
 <body>
 <a href="/">Home</a>
-<!--Fix: Load fonts from shadow root does not work + load for wrap-->
-<uni-icons-mat-two-tone></uni-icons-mat-two-tone>
 
 <h4>Custom Element:</h4>
-<uni-icons-mat-two-tone color="warn">person_pin</uni-icons-mat-two-tone>
+<uni-icons-mat-tt>person_pin</uni-icons-mat-tt>
 
 <h4>Custom Element + prop 'name':</h4>
-<uni-icons-mat-two-tone name="person_pin"></uni-icons-mat-two-tone>
+<uni-icons-mat-tt name="person_pin"></uni-icons-mat-tt>
 
-<h4>Web Component:</h4>
-<uni-icons-mat-two-tone-shadow>person_pin</uni-icons-mat-two-tone-shadow>
-
-<h4>Web Component + prop 'name':</h4>
-<uni-icons-mat-two-tone-shadow name="person_pin"></uni-icons-mat-two-tone-shadow>
-
-<h4>Custom Element Wrapper + first child:</h4>
-<uni-icons-mat-wrap active font="two-tone">
+<h4>Wrapper + first child:</h4>
+<uni-icons-mat-tt-wrap>
   <i>person_pin</i>
-</uni-icons-mat-wrap>
+</uni-icons-mat-tt-wrap>
 
-<h4>Custom Element Wrapper + prop 'name' + first child:</h4>
-<uni-icons-mat-wrap active font="two-tone" name="person_pin">
+<h4>Wrapper + prop 'name' + first child:</h4>
+<uni-icons-mat-tt-wrap name="person_pin">
   <i></i>
-</uni-icons-mat-wrap>
+</uni-icons-mat-tt-wrap>
 
-<h4>Custom Element Wrapper + selector (all):</h4>
-<uni-icons-mat-wrap active font="two-tone" selector=".test" all>
-  <span>Text</span>
+<h4>Wrapper + selector (all):</h4>
+<uni-icons-mat-tt-wrap all>
+  <span>stop_circle</span>
+  <i>person_pin</i>
+</uni-icons-mat-tt-wrap>
 
-  <span class="test">stop_circle</span>
-
-  <span>
-    <i class="test">person_pin</i>
-  </span>
-</uni-icons-mat-wrap>
-
-<h4>Custom Element Wrapper + prop 'name' + selector (all):</h4>
-<uni-icons-mat-wrap active font="two-tone" name="person_pin" selector=".test" all>
+<h4>Wrapper + prop 'name' + selector (all):</h4>
+<uni-icons-mat-tt-wrap name="person_pin" selector=".test" all>
   <span>Text</span>
 
   <span class="test"></span>
@@ -59,6 +46,6 @@
   <span>
     <i class="test"></i>
   </span>
-</uni-icons-mat-wrap>
+</uni-icons-mat-tt-wrap>
 </body>
 </html>
