--- a/src/assets/html/fa/icon-fa.html
+++ b/src/assets/html/fa/icon-fa.html
@@ -11,7 +11,7 @@
   <script nomodule src="../../../build/icn.js"></script>
 </head>
 <body>
-<a href="/">Home</a>
+<a href="../../../">Home</a>
 
 <h4>Icon Fa:</h4>
 <uni-icon-fa type="brands" name="github"></uni-icon-fa>
