--- a/src/assets/html/fa/icons-fa-brands.html
+++ b/src/assets/html/fa/icons-fa-brands.html
@@ -11,7 +11,7 @@
   <script nomodule src="../../../build/icn.js"></script>
 </head>
 <body>
-<a href="/">Home</a>
+<a href="../../../">Home</a>
 
 <h4>Custom Element:</h4>
 <uni-icons-fa-b init name="github"></uni-icons-fa-b>
