--- a/src/assets/html/fa/icons-fa.html
+++ b/src/assets/html/fa/icons-fa.html
@@ -11,7 +11,7 @@
   <script nomodule src="../../../build/icn.js"></script>
 </head>
 <body>
-<a href="/">Home</a>
+<a href="../../../">Home</a>
 
 <h4>Custom Element:</h4>
 <uni-icons-fa init name="check-circle"></uni-icons-fa>
