--- a/www/assets/html/mat/icon-mat.html
+++ b/www/assets/html/mat/icon-mat.html
@@ -11,7 +11,7 @@
   <script nomodule src="../../../build/icn.js"></script>
 </head>
 <body>
-<a href="/">Home</a>
+<a href="../../../">Home</a>
 
 <h4>Icon Mat:</h4>
 <uni-icon-mat name="play-circle"></uni-icon-mat>
