--- a/www/assets/html/mat/icons-mat-outlined.html
+++ b/www/assets/html/mat/icons-mat-outlined.html
@@ -11,7 +11,7 @@
   <script nomodule src="../../../build/icn.js"></script>
 </head>
 <body>
-<a href="/">Home</a>
+<a href="../../../">Home</a>
 
 <h4>Custom Element:</h4>
 <uni-icons-mat-o>person_pin</uni-icons-mat-o>
