--- a/www/assets/html/theme/index.html
+++ b/www/assets/html/theme/index.html
@@ -11,7 +11,7 @@
   <script nomodule src="../../../build/icn.js"></script>
 </head>
 <body>
-<a href="/">Home</a>
+<a href="../../../">Home</a>
 
 <p>Default:</p>
 <uni-theme-wrap selector="svg">
