--- a/www/assets/html/fa/icon-fa.html
+++ b/www/assets/html/fa/icon-fa.html
@@ -163,6 +163,11 @@
       </tr>
 
       <tr>
+        <td>rocket</td>
+        <td><uni-icon-fa>rocket</uni-icon-fa></td>
+      </tr>
+
+      <tr>
         <td>user-secret</td>
         <td><uni-icon-fa>user-secret</uni-icon-fa></td>
       </tr>
