--- a/src/assets/html/fa/icons-fa-regular.html
+++ b/src/assets/html/fa/icons-fa-regular.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 <a href="../../../">Home</a>
+<uni-fa-styles-load></uni-fa-styles-load>
 
 <h4>Custom Element:</h4>
-<uni-icons-fa-r init>check-circle</uni-icons-fa-r>
+<uni-icons-fa-r>check-circle</uni-icons-fa-r>
 
 <h4>Custom Element + prop 'name':</h4>
 <uni-icons-fa-r name="check-circle"></uni-icons-fa-r>
