--- a/src/assets/html/fa/icons-fa.html
+++ b/src/assets/html/fa/icons-fa.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 <a href="../../../">Home</a>
+<uni-fa-styles-load></uni-fa-styles-load>
 
 <h4>Custom Element:</h4>
-<uni-icons-fa init>check-circle</uni-icons-fa>
+<uni-icons-fa>check-circle</uni-icons-fa>
 <uni-icons-fa type="regular">check-circle</uni-icons-fa>
 <uni-icons-fa type="brands">github</uni-icons-fa>
 
