--- a/src/assets/html/fa/icons-fa-brands.html
+++ b/src/assets/html/fa/icons-fa-brands.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 <a href="../../../">Home</a>
+<uni-fa-styles-load></uni-fa-styles-load>
 
 <h4>Custom Element:</h4>
-<uni-icons-fa-b init>github</uni-icons-fa-b>
+<uni-icons-fa-b>github</uni-icons-fa-b>
 
 <h4>Custom Element + prop 'name':</h4>
 <uni-icons-fa-b name="github"></uni-icons-fa-b>
