--- a/src/assets/html/fa/icons-fa-solid.html
+++ b/src/assets/html/fa/icons-fa-solid.html
@@ -12,9 +12,10 @@
 </head>
 <body>
 <a href="../../../">Home</a>
+<uni-fa-styles-load></uni-fa-styles-load>
 
 <h4>Custom Element:</h4>
-<uni-icons-fa-s init>check-circle</uni-icons-fa-s>
+<uni-icons-fa-s>check-circle</uni-icons-fa-s>
 
 <h4>Custom Element + prop 'name':</h4>
 <uni-icons-fa-s name="check-circle"></uni-icons-fa-s>
