--- a/www/assets/html/fa/icons-fa-brands.html
+++ b/www/assets/html/fa/icons-fa-brands.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <a href="../../../">Home</a>
+<uni-fa-styles-load></uni-fa-styles-load>
 
 <h4>Custom Element:</h4>
 <uni-icons-fa-b init>github</uni-icons-fa-b>
